<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    android:orientation="vertical"
    tools:context=".DeliveryActivity">

    <ImageView
        android:id="@+id/topBarImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:contentDescription="@string/top_bar_img"
        app:srcCompat="@drawable/top_bar_img_portrait" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top">

        <TextView
            android:id="@+id/accountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/deliver_location"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/postalCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="80dp"
            android:text="@string/postal_code"
            android:textSize="@dimen/text_size_portrait" />

        <EditText
            android:id="@+id/postalCodeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="@dimen/margin_end"
            android:autofillHints=""
            android:hint="@string/postal_hint"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/detailAddressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="160dp"
            android:text="@string/detail_address"
            android:textSize="@dimen/text_size_portrait" />

        <EditText
            android:id="@+id/detailAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="@dimen/margin_end"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/detail_address_hint"
            android:inputType="textPostalAddress"
            android:textSize="@dimen/text_size_portrait" />

        <Button
            android:id="@+id/addressSelectedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="260dp"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:onClick="addressSelectedButtonOnClick"
            android:text="@string/confirm" />
    </androidx.cardview.widget.CardView>

</LinearLayout>